image path fix which not showing for slash(/)

--- a/portfolio.css
+++ b/portfolio.css
@@ -49,7 +49,7 @@
 header{
     background-color: #FFF8F3;
     padding-top: 50px;
-    background: url(/images/developer.png),url(/images/header_bg.png);
+    background: url(images/developer.png),url(images/header_bg.png);
     background-position: 23px 38px,bottom right;
     background-repeat: no-repeat;
 }
